--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartboxwhiskeroptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartboxwhiskeroptionsupdatedata.yml
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#showOutlierPoints:member'
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#quartileCalculation:member'
     summary: |-
-      返回或设置箱形图的四分位点计算类型。 读/写。
+      指定 box 和形图的四分四个计算类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: quartileCalculation
@@ -31,7 +31,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#quartileCalculation~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#showInnerPoints:member'
     summary: |-
-      指定在箱形图中是否显示内部点。 读/写。
+      指定是否在 box 和形图中显示内部点。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showInnerPoints
@@ -46,7 +46,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#showMeanLine:member'
     summary: |-
-      指定在箱形图中是否显示中线。 读/写。
+      指定是否在 box 和线形图中显示 "均值" 线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanLine
@@ -61,7 +61,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#showMeanMarker:member'
     summary: |-
-      指定在箱形图中是否显示平均值标记。 读/写。
+      指定是否在框和形图中显示 "均值" 标记。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanMarker
@@ -76,7 +76,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData#showOutlierPoints:member'
     summary: |-
-      指定在箱形图中是否显示离群值点。 读/写。
+      指定框和形图中是否显示了异常点。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showOutlierPoints
