--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
@@ -33,7 +33,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#height:member'
     summary: |-
-      对于集合中的每一项：表示图表图例上的 legendEntry 的高度。
+      对于集合中的每一项：指定图表图例上的 legendEntry 的高度。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -48,7 +48,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#index:member'
     summary: |-
-      对于集合中的每一项：代表图表图例中的 legendEntry 的索引。
+      对于集合中的每一项：指定图表图例中的 legendEntry 的索引。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -63,7 +63,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#left:member'
     summary: |-
-      对于集合中的每一项：表示图表 legendEntry 的左侧。
+      对于集合中的每一项：指定图表 legendEntry 的左侧。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -78,7 +78,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#top:member'
     summary: |-
-      对于集合中的每一项：表示图表 legendEntry 的顶部。
+      对于集合中的每一项：指定图表 legendEntry 的顶部。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
