--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.charterrorbars.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.charterrorbars.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartErrorBars#context:member'
@@ -40,7 +40,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartErrorBars#endStyleCap:member'
     summary: |-
-      指定误差线是否具有终止端样式。
+      指定误差线是否具有最终样式帽。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
@@ -170,7 +170,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartErrorBars#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -233,7 +233,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -254,7 +254,7 @@ references:
     name: Excel.Interfaces.ChartErrorBarsLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData:interface'
     name: Interfaces.ChartErrorBarsUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData:interface'
     name: Excel.Interfaces.ChartErrorBarsData
