--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsloadoptions.yml
@@ -34,7 +34,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#allowOverflow:member'
     summary: |-
-      指定是否在直方图或排列图中启用容器溢出。 读/写。
+      指定直方图图表或排列图表中是否启用了 "bin 溢出"。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
@@ -49,7 +49,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#allowUnderflow:member'
     summary: |-
-      指定是否在直方图或排列图中启用容器下溢。 读/写。
+      指定直方图图表或排列图表中是否启用了 bin 下溢。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
@@ -64,7 +64,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#count:member'
     summary: |-
-      返回或设置直方图或排列图的容器数量。 读/写。
+      指定直方图图表或排列图表的分类数。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
@@ -79,7 +79,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#overflowValue:member'
     summary: |-
-      返回或设置直方图或排列图的容器溢出值。 读/写。
+      指定直方图图表或排列图表的 "bin 溢出" 值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
@@ -94,7 +94,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#type:member'
     summary: |-
-      返回或设置直方图或排列图的容器类型。 读/写。
+      指定用于直方图图表或排列图表的 bin 类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -109,7 +109,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#underflowValue:member'
     summary: |-
-      返回或设置直方图或排列图的容器下溢值。 读/写。
+      指定直方图图表或排列图表的 bin 下溢值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
@@ -124,7 +124,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions#width:member'
     summary: |-
-      返回或设置直方图或排列图的容器宽度值。 读/写。
+      指定直方图图表或排列图表的纸盒宽度值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
