--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartgridlinesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartgridlinesloadoptions.yml
@@ -44,7 +44,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#visible:member'
     summary: |-
-      表示坐标轴网格线是否可见的布尔值。
+      指定轴网格线是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
