--- a/docs/docs-ref-autogen/word_1_3/word/word.searchoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.searchoptions.yml
@@ -13,7 +13,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.SearchOptions#context:member'
@@ -383,7 +383,7 @@ items:
         - id: context
           description: ''
           type:
-            - 'word!OfficeExtension.ClientRequestContext:class'
+            - 'office!OfficeExtension.ClientRequestContext:class'
   - uid: 'word!Word.SearchOptions#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
@@ -409,7 +409,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'word!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'word!Word.SearchOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -442,7 +442,7 @@ items:
           - 'word!Word.Interfaces.SearchOptionsData:interface'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.RequestContext:class'
     name: RequestContext
@@ -450,11 +450,11 @@ references:
     name: Word.SearchOptions
   - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions:interface'
     name: Word.Interfaces.SearchOptionsLoadOptions
-  - uid: 'word!OfficeExtension.ClientRequestContext:class'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
     name: OfficeExtension.ClientRequestContext
   - uid: 'word!Word.Interfaces.SearchOptionsUpdateData:interface'
     name: Interfaces.SearchOptionsUpdateData
-  - uid: 'word!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'word!Word.Interfaces.SearchOptionsData:interface'
     name: Word.Interfaces.SearchOptionsData
