commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartaxesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartaxesdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxesData:interface'
-    summary: <span data-ttu-id="b4421-101">描述通过调用返回的数据的接口`chartAxes.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="b4421-101">An interface describing the data returned by calling `chartAxes.toJSON()`</span></span><!-- --><span data-ttu-id="b4421-102">.</span><span class="sxs-lookup"><span data-stu-id="b4421-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAxes.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAxesData
     fullName: Excel.Interfaces.ChartAxesData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxesData#valueAxis:member'
   - uid: 'excel!Excel.Interfaces.ChartAxesData#categoryAxis:member'
     summary: |-
-      <span data-ttu-id="b4421-103">表示图表中的类别轴。</span><span class="sxs-lookup"><span data-stu-id="b4421-103">Represents the category axis in a chart.</span></span> <span data-ttu-id="b4421-104">只读。</span><span class="sxs-lookup"><span data-stu-id="b4421-104">Read-only.</span></span>
+      表示图表中的类别轴。
 
-      <span data-ttu-id="b4421-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4421-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryAxis
     fullName: categoryAxis
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxesData#seriesAxis:member'
     summary: |-
-      <span data-ttu-id="b4421-106">表示三维图表的系列轴。</span><span class="sxs-lookup"><span data-stu-id="b4421-106">Represents the series axis of a 3-dimensional chart.</span></span> <span data-ttu-id="b4421-107">只读。</span><span class="sxs-lookup"><span data-stu-id="b4421-107">Read-only.</span></span>
+      表示三维图表的系列轴。
 
-      <span data-ttu-id="b4421-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4421-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: seriesAxis
     fullName: seriesAxis
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxesData#valueAxis:member'
     summary: |-
-      <span data-ttu-id="b4421-109">表示坐标轴中的数值轴。</span><span class="sxs-lookup"><span data-stu-id="b4421-109">Represents the value axis in an axis.</span></span> <span data-ttu-id="b4421-110">只读。</span><span class="sxs-lookup"><span data-stu-id="b4421-110">Read-only.</span></span>
+      表示坐标轴中的数值轴。
 
-      <span data-ttu-id="b4421-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4421-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueAxis
     fullName: valueAxis
     langs:
