--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitleformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitleformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData:interface'
-    summary: '<span data-ttu-id="d6c8d-101">一个用于更新 ChartAxisTitleFormat 对象上的数据的接口，可用于`chartAxisTitleFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="d6c8d-101">An interface for updating data on the ChartAxisTitleFormat object, for use in `chartAxisTitleFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="d6c8d-102">.</span><span class="sxs-lookup"><span data-stu-id="d6c8d-102"></span></span>'
+    summary: '一个用于更新 ChartAxisTitleFormat 对象上的数据的接口，可用于`chartAxisTitleFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartAxisTitleFormatUpdateData
     fullName: Excel.Interfaces.ChartAxisTitleFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="d6c8d-103">表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="d6c8d-103">Represents the font attributes, such as font name, font size, color, etc. of chart axis title object.</span></span>
+      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
 
-      <span data-ttu-id="d6c8d-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6c8d-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
