commit translated contents

--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.datavalidationerroralert.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.datavalidationerroralert.yml
@@ -33,7 +33,7 @@ items:
           - string
   - uid: 'excel!Excel.DataValidationErrorAlert#showAlert:member'
     summary: |-
-      确定在用户输入无效数据时是否显示错误警报对话框。 默认值为 true。
+      指定当用户输入无效数据时是否显示出错警告对话框。 默认值为 true。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAlert
@@ -48,7 +48,7 @@ items:
           - boolean
   - uid: 'excel!Excel.DataValidationErrorAlert#style:member'
     summary: |-
-      表示数据有效性警报类型，有关详细信息，请参阅 Excel.DataValidationAlertStyle。
+      数据有效性警报类型，有关详细信息，请参阅 DataValidationAlertStyle。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
