--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartlegend.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartlegend.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartLegend#context:member'
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartLegend#format:member'
     summary: |-
-      表示图表图例的格式，包括填充和字体格式。 只读。
+      表示图表图例的格式，包括填充和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -60,7 +60,7 @@ items:
           - 'excel!Excel.ChartLegendFormat:class'
   - uid: 'excel!Excel.ChartLegend#height:member'
     summary: |-
-      表示图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -75,7 +75,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartLegend#left:member'
     summary: |-
-      代表图表图例的左侧（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -90,7 +90,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartLegend#legendEntries:member'
     summary: |-
-      表示图例中 legendEntries 的集合。 只读。
+      表示图例中 legendEntries 的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legendEntries
@@ -187,7 +187,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartLegend#overlay:member'
     summary: |-
-      表示图表图例是否应该与图表的主体重叠的布尔值。
+      指定图表图例是否应与图表的主体重叠。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
@@ -202,7 +202,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartLegend#position:member'
     summary: |-
-      表示图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -240,7 +240,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartLegend#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -261,7 +261,7 @@ items:
             - 'excel!Excel.ChartLegend:class'
   - uid: 'excel!Excel.ChartLegend#showShadow:member'
     summary: |-
-      表示图例在图表上是否有阴影。
+      指定图例在图表上是否有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -289,7 +289,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartLegend#top:member'
     summary: |-
-      表示图表图例顶部。
+      指定图表图例的顶端。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -304,7 +304,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartLegend#visible:member'
     summary: |-
-      表示 ChartLegend 对象是否可见的布尔值。
+      指定 ChartLegend 是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -319,7 +319,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartLegend#width:member'
     summary: |-
-      表示图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -333,7 +333,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -356,7 +356,7 @@ references:
         fullName: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
     name: Interfaces.ChartLegendUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartLegendData:interface'
     name: Excel.Interfaces.ChartLegendData
