--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartpointloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartpointloadoptions.yml
@@ -80,7 +80,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointLoadOptions#markerBackgroundColor:member'
     summary: |-
-      表示数据点的标记背景色的 HTML 颜色代码。 例如， \#FF0000 表示红色。
+      数据点的标记背景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -95,7 +95,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointLoadOptions#markerForegroundColor:member'
     summary: |-
-      表示数据点的标记前景色的 HTML 颜色代码。 例如， \#FF0000 表示红色。
+      数据点的标记前景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -140,7 +140,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointLoadOptions#value:member'
     summary: |-
-      返回图表点的值。 只读。
+      返回图表点的值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
