--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttitleformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttitleformatdata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.ChartTitleFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatData#border:member'
     summary: |-
-      代表图表标题的边框格式，包括颜色、linestyle 和粗细。 只读。
+      代表图表标题的边框格式，包括颜色、linestyle 和粗细。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -28,7 +28,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatData#font:member'
     summary: |-
-      表示对象的字体属性（字体名称、字体大小、颜色等）。 只读。
+      表示对象的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
