--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.custompropertyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.custompropertyupdatedata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.CustomPropertyUpdateData#value:member'
   - uid: 'excel!Excel.Interfaces.CustomPropertyUpdateData#value:member'
     summary: |-
-      获取或设置自定义属性的值。
+      自定义属性的值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
