--- a/docs/docs-ref-autogen/excel_online/excel/excel.nameditem.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.nameditem.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.NamedItem#arrayValues:member'
@@ -36,7 +36,7 @@ items:
       - 'excel!Excel.NamedItem#worksheetOrNullObject:member'
   - uid: 'excel!Excel.NamedItem#arrayValues:member'
     summary: |-
-      返回包含已命名项目的值和类型的对象。 只读。
+      返回包含已命名项目的值和类型的对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: arrayValues
@@ -51,7 +51,7 @@ items:
           - 'excel!Excel.NamedItemArrayValues:class'
   - uid: 'excel!Excel.NamedItem#comment:member'
     summary: |-
-      表示与此名称相关联的注释。
+      指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -118,7 +118,7 @@ items:
           ```
   - uid: 'excel!Excel.NamedItem#formula:member'
     summary: |-
-      获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
@@ -295,7 +295,7 @@ items:
                       }
   - uid: 'excel!Excel.NamedItem#name:member'
     summary: |-
-      对象的名称。 只读。
+      对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -310,7 +310,7 @@ items:
           - string
   - uid: 'excel!Excel.NamedItem#scope:member'
     summary: |-
-      指明是否将 name 限定到工作簿或特定工作表。 可能的值为：工作表、工作簿。 只读。
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -348,7 +348,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.NamedItem#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -382,7 +382,7 @@ items:
         description: ''
   - uid: 'excel!Excel.NamedItem#type:member'
     summary: |-
-      指明 name 公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -397,7 +397,7 @@ items:
           - 'excel!Excel.NamedItem#type~0:complex'
   - uid: 'excel!Excel.NamedItem#value:member'
     summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
@@ -456,7 +456,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.NamedItemArrayValues:class'
     name: Excel.NamedItemArrayValues
@@ -479,7 +479,7 @@ references:
         fullName: ' | "Worksheet" | "Workbook"'
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
     name: Interfaces.NamedItemUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.NamedItemData:interface'
     name: Excel.Interfaces.NamedItemData
