--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysisline.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysisline.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.InkAnalysisLine#context:member'
@@ -186,7 +186,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.InkAnalysisLine#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -260,7 +260,7 @@ items:
         type:
           - 'onenote!OneNote.InkAnalysisWordCollection:class'
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
@@ -272,7 +272,7 @@ references:
     name: OneNote.InkAnalysisParagraph
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineUpdateData:interface'
     name: Interfaces.InkAnalysisLineUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData:interface'
     name: OneNote.Interfaces.InkAnalysisLineData
