--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.chartpointscollection.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.chartpointscollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartPointsCollection:class'
     summary: |-
-      <span data-ttu-id="d03ed-101">图表中某个系列的所有图表点的集合。</span><span class="sxs-lookup"><span data-stu-id="d03ed-101">A collection of all the chart points within a series inside a chart.</span></span>
+      图表中某个系列的所有图表点的集合。
 
-      <span data-ttu-id="d03ed-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d03ed-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPointsCollection
     fullName: Excel.ChartPointsCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPointsCollection#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.ChartPointsCollection#load:member(3)'
       - 'excel!Excel.ChartPointsCollection#toJSON:member(1)'
   - uid: 'excel!Excel.ChartPointsCollection#context:member'
-    summary: <span data-ttu-id="d03ed-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d03ed-103">The request context associated with the object.</span></span> <span data-ttu-id="d03ed-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="d03ed-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPointsCollection#count:member'
     summary: |-
-      <span data-ttu-id="d03ed-105">返回系列中的图表点数。</span><span class="sxs-lookup"><span data-stu-id="d03ed-105">Returns the number of chart points in the series.</span></span> <span data-ttu-id="d03ed-106">只读。</span><span class="sxs-lookup"><span data-stu-id="d03ed-106">Read-only.</span></span>
+      返回系列中的图表点数。
 
-      <span data-ttu-id="d03ed-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d03ed-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -52,9 +52,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPointsCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="d03ed-108">返回系列中的图表点数。</span><span class="sxs-lookup"><span data-stu-id="d03ed-108">Returns the number of chart points in the series.</span></span>
+      返回系列中的图表点数。
 
-      <span data-ttu-id="d03ed-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d03ed-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -68,9 +68,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartPointsCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="d03ed-110">根据其在系列中的位置检索点。</span><span class="sxs-lookup"><span data-stu-id="d03ed-110">Retrieve a point based on its position within the series.</span></span>
+      根据其在系列中的位置检索点。
 
-      <span data-ttu-id="d03ed-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d03ed-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -84,7 +84,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="d03ed-112">示例</span><span class="sxs-lookup"><span data-stu-id="d03ed-112">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Set the border color for the first points in the points collection
@@ -103,11 +103,11 @@ items:
           ```
       parameters:
         - id: index
-          description: <span data-ttu-id="d03ed-113">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="d03ed-113">Index value of the object to be retrieved.</span></span> <span data-ttu-id="d03ed-114">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="d03ed-114">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'excel!Excel.ChartPointsCollection#items:member'
-    summary: <span data-ttu-id="d03ed-115">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="d03ed-115">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -119,7 +119,7 @@ items:
         type:
           - 'excel!Excel.ChartPointsCollection#items~0:complex'
   - uid: 'excel!Excel.ChartPointsCollection#load:member(1)'
-    summary: <span data-ttu-id="d03ed-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d03ed-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d03ed-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d03ed-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -133,11 +133,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="d03ed-118">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="d03ed-118">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.ChartPointsCollection#load~0:complex'
   - uid: 'excel!Excel.ChartPointsCollection#load:member(2)'
-    summary: <span data-ttu-id="d03ed-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d03ed-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d03ed-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d03ed-120">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -151,7 +151,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="d03ed-121">示例</span><span class="sxs-lookup"><span data-stu-id="d03ed-121">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Get the names of points in the points collection
@@ -187,11 +187,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="d03ed-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="d03ed-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartPointsCollection#load:member(3)'
-    summary: <span data-ttu-id="d03ed-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d03ed-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d03ed-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d03ed-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -205,11 +205,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="d03ed-125">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="d03ed-125">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.ChartPointsCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="d03ed-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="d03ed-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="d03ed-127">.</span><span class="sxs-lookup"><span data-stu-id="d03ed-127"></span></span> <span data-ttu-id="d03ed-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="d03ed-128"></span></span><!-- --><span data-ttu-id="d03ed-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartPointsCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointsCollectionData`</span><span class="sxs-lookup"><span data-stu-id="d03ed-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.ChartPointsCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPointsCollectionData`</span></span><!-- --><span data-ttu-id="d03ed-130">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="d03ed-130">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartPointsCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointsCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -222,7 +222,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPointsCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -230,7 +230,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -260,7 +260,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.ChartPointsCollectionData:interface'
     name: Excel.Interfaces.ChartPointsCollectionData
