--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionaldatabarnegativeformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionaldatabarnegativeformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat:class'
     summary: |-
-      <span data-ttu-id="a6b4f-101">代表数据栏的负侧的条件格式 DataBar 格式。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-101">Represents a conditional format DataBar Format for the negative side of the data bar.</span></span>
+      代表数据栏的负侧的条件格式 DataBar 格式。
 
-      <span data-ttu-id="a6b4f-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6b4f-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalDataBarNegativeFormat
     fullName: Excel.ConditionalDataBarNegativeFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ConditionalDataBarNegativeFormat#borderColor:member'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.ConditionalDataBarNegativeFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#borderColor:member'
     summary: |-
-      <span data-ttu-id="a6b4f-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="a6b4f-104">如果不存在或设置了边框，则为 "空字符串"。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-104">"Empty String" if no border is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
 
-      <span data-ttu-id="a6b4f-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6b4f-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
     fullName: borderColor
     langs:
@@ -41,7 +41,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#context:member'
-    summary: <span data-ttu-id="a6b4f-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-106">The request context associated with the object.</span></span> <span data-ttu-id="a6b4f-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -54,9 +54,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#fillColor:member'
     summary: |-
-      <span data-ttu-id="a6b4f-108">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-108">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="a6b4f-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6b4f-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
     fullName: fillColor
     langs:
@@ -68,7 +68,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#load:member(1)'
-    summary: <span data-ttu-id="a6b4f-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6b4f-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -82,11 +82,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="a6b4f-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions:interface'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#load:member(2)'
-    summary: <span data-ttu-id="a6b4f-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6b4f-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -100,11 +100,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a6b4f-115">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-115">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#load:member(3)'
-    summary: <span data-ttu-id="a6b4f-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6b4f-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -122,7 +122,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="a6b4f-118">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-118">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -131,9 +131,9 @@ items:
                       }
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#matchPositiveBorderColor:member'
     summary: |-
-      <span data-ttu-id="a6b4f-119">该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-119">Boolean representation of whether or not the negative DataBar has the same border color as the positive DataBar.</span></span>
+      指定负 DataBar 的边框颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="a6b4f-120">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6b4f-120">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveBorderColor
     fullName: matchPositiveBorderColor
     langs:
@@ -146,9 +146,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#matchPositiveFillColor:member'
     summary: |-
-      <span data-ttu-id="a6b4f-121">该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-121">Boolean representation of whether or not the negative DataBar has the same fill color as the positive DataBar.</span></span>
+      指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="a6b4f-122">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6b4f-122">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveFillColor
     fullName: matchPositiveFillColor
     langs:
@@ -160,9 +160,9 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#set:member(1)'
-    summary: '<span data-ttu-id="a6b4f-123">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-123">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="a6b4f-124">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-124">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="a6b4f-125">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="a6b4f-125">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ConditionalDataBarNegativeFormat): void`
     name: 'set(properties, options)'
@@ -178,15 +178,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="a6b4f-126">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-126">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="a6b4f-127">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-127">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#set:member(2)'
-    summary: '<span data-ttu-id="a6b4f-128">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-128">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -204,7 +204,7 @@ items:
           type:
             - 'excel!Excel.ConditionalDataBarNegativeFormat:class'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="a6b4f-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a6b4f-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a6b4f-130">.</span><span class="sxs-lookup"><span data-stu-id="a6b4f-130"></span></span> <span data-ttu-id="a6b4f-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a6b4f-131"></span></span><!-- --><span data-ttu-id="a6b4f-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalDataBarNegativeFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalDataBarNegativeFormatData`</span><span class="sxs-lookup"><span data-stu-id="a6b4f-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ConditionalDataBarNegativeFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ConditionalDataBarNegativeFormatData`</span></span><!-- --><span data-ttu-id="a6b4f-133">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="a6b4f-133">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalDataBarNegativeFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalDataBarNegativeFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -217,7 +217,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -227,7 +227,7 @@ references:
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
     name: Interfaces.ConditionalDataBarNegativeFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatData
