--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelineformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelineformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ShapeLineFormat:class'
     summary: |-
-      <span data-ttu-id="db991-101">代表 shape 对象的线条格式。</span><span class="sxs-lookup"><span data-stu-id="db991-101">Represents the line formatting for the shape object.</span></span> <span data-ttu-id="db991-102">对于图像和几何形状，线条格式表示形状的边框。</span><span class="sxs-lookup"><span data-stu-id="db991-102">For images and geometric shapes, line formatting represents the border of the shape.</span></span>
+      代表 shape 对象的线条格式。 对于图像和几何形状，线条格式表示形状的边框。
 
-      <span data-ttu-id="db991-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeLineFormat
     fullName: Excel.ShapeLineFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ShapeLineFormat#color:member'
@@ -29,9 +29,9 @@ items:
       - 'excel!Excel.ShapeLineFormat#weight:member'
   - uid: 'excel!Excel.ShapeLineFormat#color:member'
     summary: |-
-      <span data-ttu-id="db991-104">代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="db991-104">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="db991-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -43,7 +43,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ShapeLineFormat#context:member'
-    summary: <span data-ttu-id="db991-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="db991-106">The request context associated with the object.</span></span> <span data-ttu-id="db991-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="db991-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -56,9 +56,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ShapeLineFormat#dashStyle:member'
     summary: |-
-      <span data-ttu-id="db991-108">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="db991-108">Represents the line style of the shape.</span></span> <span data-ttu-id="db991-109">当线条不可见或短划线样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="db991-109">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="db991-110">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="db991-110">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="db991-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dashStyle
     fullName: dashStyle
     langs:
@@ -70,7 +70,7 @@ items:
         type:
           - 'excel!Excel.ShapeLineFormat#dashStyle~0:complex'
   - uid: 'excel!Excel.ShapeLineFormat#load:member(1)'
-    summary: <span data-ttu-id="db991-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db991-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db991-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db991-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -84,11 +84,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="db991-114">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="db991-114">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
   - uid: 'excel!Excel.ShapeLineFormat#load:member(2)'
-    summary: <span data-ttu-id="db991-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db991-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db991-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db991-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -102,11 +102,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="db991-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="db991-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ShapeLineFormat#load:member(3)'
-    summary: <span data-ttu-id="db991-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db991-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db991-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db991-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -124,7 +124,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="db991-120">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="db991-120">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -132,9 +132,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ShapeLineFormat#set:member(1)'
-    summary: '<span data-ttu-id="db991-121">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="db991-121">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="db991-122">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="db991-122">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="db991-123">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="db991-123">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ShapeLineFormat): void`
     name: 'set(properties, options)'
@@ -150,15 +150,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="db991-124">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="db991-124">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="db991-125">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="db991-125">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ShapeLineFormat#set:member(2)'
-    summary: '<span data-ttu-id="db991-126">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="db991-126">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -177,9 +177,9 @@ items:
             - 'excel!Excel.ShapeLineFormat:class'
   - uid: 'excel!Excel.ShapeLineFormat#style:member'
     summary: |-
-      <span data-ttu-id="db991-127">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="db991-127">Represents the line style of the shape.</span></span> <span data-ttu-id="db991-128">当线条不可见或样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="db991-128">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="db991-129">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="db991-129">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="db991-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -191,7 +191,7 @@ items:
         type:
           - 'excel!Excel.ShapeLineFormat#style~0:complex'
   - uid: 'excel!Excel.ShapeLineFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="db991-131">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="db991-131">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="db991-132">.</span><span class="sxs-lookup"><span data-stu-id="db991-132"></span></span> <span data-ttu-id="db991-133">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="db991-133"></span></span><!-- --><span data-ttu-id="db991-134">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeLineFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeLineFormatData`</span><span class="sxs-lookup"><span data-stu-id="db991-134">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ShapeLineFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ShapeLineFormatData`</span></span><!-- --><span data-ttu-id="db991-135">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="db991-135">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeLineFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeLineFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -205,9 +205,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ShapeLineFormat#transparency:member'
     summary: |-
-      <span data-ttu-id="db991-136">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="db991-136">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="db991-137">当形状的透明度不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="db991-137">Returns null when the shape has inconsistent transparencies.</span></span>
+      将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
 
-      <span data-ttu-id="db991-138">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-138">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: transparency
     fullName: transparency
     langs:
@@ -220,9 +220,9 @@ items:
           - number
   - uid: 'excel!Excel.ShapeLineFormat#visible:member'
     summary: |-
-      <span data-ttu-id="db991-139">表示形状元素的线条格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="db991-139">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="db991-140">当形状的可见性不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="db991-140">Returns null when the shape has inconsistent visibilities.</span></span>
+      指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
 
-      <span data-ttu-id="db991-141">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-141">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -235,9 +235,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ShapeLineFormat#weight:member'
     summary: |-
-      <span data-ttu-id="db991-142">表示线条的粗细（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="db991-142">Represents the weight of the line, in points.</span></span> <span data-ttu-id="db991-143">当线条不可见或线条粗细不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="db991-143">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
+      表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
 
-      <span data-ttu-id="db991-144">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db991-144">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
@@ -249,7 +249,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -268,7 +268,7 @@ references:
     name: Excel.Interfaces.ShapeLineFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
     name: Interfaces.ShapeLineFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.ShapeLineFormat#style~0:complex'
     name: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
